fixed svg not showing up

--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,6 @@ main {
     height: 200px;
     overflow: hidden;
     border-radius: 10px;
-    background-image: url(/images/illustration-article.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 
@@ -113,7 +110,6 @@ a:hover {
     
     #img-container {
         width: 100%;
-        background-repeat: no-repeat;
         overflow: hidden;
     }
 
